--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,7 +1,9 @@
-blockquote {
-	margin: 0 0 45px;
-	font-style: italic;
-	p {
-		font-size: 1.375em;	
+.content {
+	blockquote {
+		margin: 0 0 45px;
+		font-style: italic;
+		p {
+			font-size: 1.375em;	
+		}
 	}
 }
